Enhance buttons, mobile enhancements, sidebar template

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               'pixel-panel': '#4b3b3b',
               'pixel-border': '#6d5b5b',
               'pixel-text': '#f0f4f8',
-              'pixel-accent': '#ffb400', // Seed yellow
+              'pixel-accent': '#ffb400',
               'pixel-soil': '#a8755b',
               'pixel-tree': '#5ad43d',
               'pixel-withered': '#8b5cf6',
@@ -51,15 +51,6 @@
         }
       }
     </style>
-  <script type="importmap">
-{
-  "imports": {
-    "react": "https://aistudiocdn.com/react@^19.2.0",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-    "react/": "https://aistudiocdn.com/react@^19.2.0/"
-  }
-}
-</script>
 </head>
   <body class="bg-pixel-bg text-pixel-text">
     <div id="root"></div>
