--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@
       }
       body .season-panel-solid {
         background-color: var(--season-panel-solid) !important;
+        border-color: var(--season-border) !important;
+        transition: background-color 0.6s ease, border-color 0.6s ease, box-shadow 0.6s ease;
       }
       body [class*="border-pixel-border"] {
         border-color: var(--season-border) !important;
